# deepseek-cli

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  COMPATIBILITY_GUIDE.md  CONTRIBUTING.md  LICENSE  NEOVIM_KEYMAPS.md  README.md  chat_history.jsonl  compatibility_check.sh  debug_chat.py  deepseek.lua  ds_global.sh  init.lua  install-neovim-module.sh  install.sh  keymaps.lua  pyproject.toml  setup.py  test_ansi.py  test_code.py  test_color.py  test_colors.py  test_doctest.py  test_highlighter.py  test_render.py  test_render_direct.py  test_rust_module.py  test_simple_highlighter.py  test_syntax_highlight.py  染色功能分离实现总结.md  染色功能分离评估.md
ds/: __init__.py  __main__.py  _ds_highlighter.dylib  chat.py  config.py  ds_highlighter.py  highlighter.py  nvim.py  utils.py
ds-highlighter/: Cargo.toml
ds-highlighter/src/: lib.rs
